test-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Test-app-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-app.example.com
    http:
      paths:
      - path: /
      pathType: Prefix
      backend:
        service:
          name: Test-app-service
          port:
            number: 80
